Added job search

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,3 +82,11 @@
   padding: 8px; /* Set padding to create a border effect */
   z-index: -1; /* Place it behind the circular progress bar */
 }
+
+.custom-gradient {
+  background-image: radial-gradient(
+    circle 311px at 8.6% 27.9%,
+    rgba(62, 147, 252, 0.57) 12.9%,
+    rgba(239, 183, 192, 0.44) 91.2%
+  );
+}
