--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,9 +84,10 @@
 }
 
 .custom-gradient {
-  background-image: radial-gradient(
+  /* background-image: radial-gradient(
     circle 311px at 8.6% 27.9%,
     rgba(62, 147, 252, 0.57) 12.9%,
     rgba(239, 183, 192, 0.44) 91.2%
-  );
+  ); */
+  background-color: @apply bg-blue-400;
 }
